# sigmakcoin

./: Cargo.toml  README.md  miner_simulation.py  requirements.txt
p2p_network/: Cargo.toml
p2p_network/src/: lib.rs  main.rs
proof_verifier/: Cargo.toml
proof_verifier/src/: lib.rs  zk_circuit.rs
proof_verifier/target_cli/: .rustc_info.json
proof_verifier/target_cli/release/: sigmak_zk.d
proof_verifier/target_cli/release/.fingerprint/anyhow-27d2bee24e904172/: lib-anyhow  lib-anyhow.json
proof_verifier/target_cli/release/.fingerprint/anyhow-2dcd281fd58627dc/: run-build-script-build-script-build  run-build-script-build-script-build.json
proof_verifier/target_cli/release/.fingerprint/anyhow-a3d70d83cc0c23f4/: build-script-build-script-build  build-script-build-script-build.json
proof_verifier/target_cli/release/.fingerprint/autocfg-1c4fb7a37cc3df69/: lib-autocfg  lib-autocfg.json
proof_verifier/target_cli/release/.fingerprint/cfg-if-be2711f84a777e73/: lib-cfg_if  lib-cfg_if.json
proof_verifier/target_cli/release/.fingerprint/either-b1b2f65d25d9b771/: lib-either  lib-either.json
proof_verifier/target_cli/release/.fingerprint/heck-db5dbcc30c5127f7/: lib-heck  lib-heck.json
proof_verifier/target_cli/release/.fingerprint/indoc-0c686c3f403a2566/: lib-indoc  lib-indoc.json
proof_verifier/target_cli/release/.fingerprint/libc-42e3b1e7fdf5991c/: lib-libc  lib-libc.json
proof_verifier/target_cli/release/.fingerprint/libc-e7268e673a9e3749/: run-build-script-build-script-build  run-build-script-build-script-build.json
proof_verifier/target_cli/release/.fingerprint/memoffset-7e458a088fe12ee1/: lib-memoffset  lib-memoffset.json
proof_verifier/target_cli/release/.fingerprint/memoffset-bd4038ec06be5b7a/: run-build-script-build-script-build  run-build-script-build-script-build.json
proof_verifier/target_cli/release/.fingerprint/num-bigint-63edbfaedfb8564b/: lib-num_bigint  lib-num_bigint.json
proof_verifier/target_cli/release/.fingerprint/num-integer-4d421c791bdab8c3/: lib-num_integer  lib-num_integer.json
proof_verifier/target_cli/release/.fingerprint/num-traits-248d0710259a166f/: build-script-build-script-build
proof_verifier/target_cli/release/.fingerprint/num-traits-5246f9720006ff33/: lib-num_traits.json
proof_verifier/target_cli/release/.fingerprint/num-traits-ee94dd6845fb36df/: run-build-script-build-script-build
proof_verifier/target_cli/wheels/: proof_verifier-0.1.0-cp310-cp310-win_amd64.whl
(+125 files in other folders)
