[package]
name = "p2p_network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["gossipsub", "mdns", "tcp", "tokio", "noise", "yamux", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
futures = "0.3"