[package]
name = "proof_verifier"
version = "0.1.0"
edition = "2021"

[lib]
name = "sigmak_zk"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-air = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3" }
p3-util = { git = "https://github.com/Plonky3/Plonky3" }
pyo3 = { version = "0.20", features = ["extension-module"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
sha2 = "0.10"
